[package]
name = "rusty-raytracer"
version = "0.1.0"
authors = ["Michael Koegeboehn <50760114+mkoegeboehn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_raytracer"
path = "src/lib.rs"

[[bin]]
name = "rusty_raytracer-cli"
path = "src/bin/main.rs"

[dependencies]
image = "0.23.14"
num-traits = "0.2.14"
enum_dispatch = "0.3.5"

[profile.release]
lto = true
